force-app/main/default/objects/KFacture__c/KFacture__c.object-meta.xml
<CustomObject>
    <description>Objet utilisé pour les tableaux Einstein</description>
    <label>KFacture</label>
    <nameField>
        <label>Nom de KFacture</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KFacture</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>