force-app/main/default/objects/KFacture__c/fields/codeContrat__c.field-meta.xml
<CustomField>
    <fullName>codeContrat__c</fullName>
    <label>Code contrat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>