force-app/main/default/objects/KFacture__c/fields/codeDepot__c.field-meta.xml
<CustomField>
    <fullName>codeDepot__c</fullName>
    <label>Code dépôt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>