force-app/main/default/objects/KFacture__c/fields/codeDS__c.field-meta.xml
<CustomField>
    <fullName>codeDS__c</fullName>
    <label>Code DS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>