force-app/main/default/objects/KFacture__c/fields/codeFacture__c.field-meta.xml
<CustomField>
    <fullName>codeFacture__c</fullName>
    <externalId>true</externalId>
    <label>Code facture</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>