force-app/main/default/objects/KFacture__c/fields/dateFacture__c.field-meta.xml
<CustomField>
    <fullName>dateFacture__c</fullName>
    <label>Date facture</label>
    <type>Date</type>
</CustomField>