force-app/main/default/objects/KFacture__c/fields/MontantHT__c.field-meta.xml
<CustomField>
    <fullName>MontantHT__c</fullName>
    <label>Montant (HT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>