force-app/main/default/objects/KFacture__c/fields/MontantTTC__c.field-meta.xml
<CustomField>
    <fullName>MontantTTC__c</fullName>
    <label>Montant (TTC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>