force-app/main/default/objects/KFacture__c/fields/nomDepot__c.field-meta.xml
<CustomField>
    <fullName>nomDepot__c</fullName>
    <label>Nom dépôt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>