force-app/main/default/objects/KFacture__c/fields/nomDR__c.field-meta.xml
<CustomField>
    <fullName>nomDR__c</fullName>
    <label>Nom DR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>