force-app/main/default/objects/KFacture__c/fields/nomDS__c.field-meta.xml
<CustomField>
    <fullName>nomDS__c</fullName>
    <label>Nom DS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>