force-app/main/default/objects/KFacture__c/fields/typeFacture__c.field-meta.xml
<CustomField>
    <fullName>typeFacture__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Type facture</label>
    <type>Checkbox</type>
</CustomField>